@@ -39,14 +39,14 @@ public class RouteEvaluatorTest
         // Expected distance is sum of distances between adjacent cities on route
         // including returning to the start city.
         int expectedDistance1 = 8 + 5 + 13 + 21;
-        int actualDistance1 = (int) evaluator.getFitness(route1);
+        int actualDistance1 = (int) evaluator.getFitness(route1, null);
         assert actualDistance1 == expectedDistance1 : "Distance should be " + expectedDistance1 + ", was " + actualDistance1;
 
         List<String> route2 = Arrays.asList("City3", "City4", "City2", "City1");
         // Expected distance is sum of distances between adjacent cities on route
         // including returning to the start city.
         int expectedDistance2 = 34 + 21 + 3 + 5;
-        int actualDistance2 = (int) evaluator.getFitness(route2);
+        int actualDistance2 = (int) evaluator.getFitness(route2, null);
         assert actualDistance2 == expectedDistance2 : "Distance should be " + expectedDistance2 + ", was " + actualDistance2;
     }
 
@@ -62,7 +62,7 @@ public class RouteEvaluatorTest
         List<String> route = Arrays.asList("City1");
         // Expected distance is sum of distances between adjacent cities on route
         // including returning to the start city.
-        int distance = (int) evaluator.getFitness(route);
+        int distance = (int) evaluator.getFitness(route, null);
         assert distance == 0 : "Distance should be 0, was " + distance;        
     }
 
